# cfutil

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml
app/: cli.py
cfn/: cfn_yaml_tags.py  macros.py  yaml_extensions.py
commands/: flatten.py  retain.py
tests/: test_cli.py  test_flatten.py  test_yaml_extensions.py
tests/fixtures/complex_cf_01/: template.yaml
tests/fixtures/complex_cf_01/api/: template.yaml
tests/fixtures/complex_cf_01/api/delete_draft/: app.py
tests/fixtures/complex_cf_01/api/delete_draft/schemas/: delete_draft.schema.yaml  delete_draft_response.schema.yaml
tests/fixtures/complex_cf_01/api/link_draft/: app.py
tests/fixtures/complex_cf_01/api/link_draft/schemas/: link_draft.schema.yaml
tests/fixtures/complex_cf_01/api/write_draft/: app.py
tests/fixtures/complex_cf_01/api/write_draft/schemas/: write_draft.schema.yaml
tests/fixtures/sam_stack_cf/: sub_stack_template.yaml  template.yaml
tests/fixtures/sam_stack_cf/sub_stack/: data.yaml  template.yaml
tests/fixtures/simple_cf/: template.yaml
tests/fixtures/with_macros_01/: data.yaml  template.yaml  text.txt
