[tool.poetry]
name = "cfutil"
version = "0.1.0"
description = ""
authors = ["Martin Macak <martin.macak@vertice.one>"]
readme = "README.md"
packages = [
    {include = "commands"},
    {include = "app"},
]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.scripts]
cfutil = "app.cli:main"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
